src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_rhs_update_concat_plus_case1.snap
---
source: src/regression_tests/format.rs
description: "{ meta = oldAttrs.meta // { description = \"x\"; }; }"
---
{
  meta = oldAttrs.meta // {
    description = "x";
  };
}
