src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_rhs_update_concat_plus_case2.snap
---
source: src/regression_tests/format.rs
description: "{ x = a // { y = 1;\n z = 2;\n}; }"
---
{
  x = a // {
    y = 1;
    z = 2;
  };
}
