src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_chained_presence_checks-2.snap
---
source: src/regression_tests/format.rs
description: "a ? b.c.d ? e.\"f\".${g} ? h.i"
---
a ? b.c.d ? e."f".${g} ? h.i
