src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_chained_presence_checks-3.snap
---
source: src/regression_tests/format.rs
description: aaaaaaaaaaaaaaaaaaaaaaaaaa ? bbbbbbbbbbbbbbbbbb ? cccccccccccccccccc ? dddddddddddddddddd ? eeeeeeeeeeeeeeeeee
---
aaaaaaaaaaaaaaaaaaaaaaaaaa
  ? bbbbbbbbbbbbbbbbbb
  ? cccccccccccccccccc
  ? dddddddddddddddddd
  ? eeeeeeeeeeeeeeeeee
