src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_chained_presence_checks-4.snap
---
source: src/regression_tests/format.rs
description: "a  # one\n  ? b # two\n  ? c"
---
a  # one
  ? b # two
  ? c
