src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_comparison_op_softline-2.snap
---
source: src/regression_tests/format.rs
description: "{\n  x =\n    a ==\n    # note\n    b.c (d: e);\n}"
---
{
  x =
    a ==
    # note
    b.c (d: e);
}
