src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_comparison_op_softline-4.snap
---
source: src/regression_tests/format.rs
description: "a // { b = 1; } == { c = 1; }"
---
a // { b = 1; } == { c = 1; }
